--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ build_and_push_to_docker_hub:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: alex2683/infra:latest
+          tags: alex2683/infra:v2
 
 deploy:
     runs-on: ubuntu-latest
