--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: alex2683/infra:v1
+          tags: alex2683/infra:latest
 
   deploy:
     runs-on: ubuntu-latest
